tests/files/parser_tests/should_fail/048.cmdr
//Should not parse incorrect variable initialization
= 3;